--- a/index.ipynb
+++ b/index.ipynb
@@ -189,7 +189,7 @@
     "def output_at(list_of_terms, x_value):\n",
     "    result = 0\n",
     "    for term in list_of_terms:\n",
-    "        result = result + term[]"
+    "        result = result + term[0]*(term[1])"
    ]
   },
   {
