--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -307,10 +307,14 @@
     {
      "data": {
       "text/plain": [
-       "[15, 19, 23, 27, 31, 35]"
+       "{'x': [0, 1, 2, 3, 4, 5],\n",
+       " 'y': [15, 19, 23, 27, 31, 35],\n",
+       " 'mode': 'line',\n",
+       " 'name': 'data',\n",
+       " 'text': []}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
