Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -361,7 +361,8 @@
    "outputs": [],
    "source": [
     "def delta_f(list_of_terms, x_value, delta_x):\n",
-    "    val_1 = "
+    "    val_1 = 0\n",
+    "    for i"
    ]
   },
   {
