--- a/index.ipynb
+++ b/index.ipynb
@@ -362,7 +362,8 @@
    "source": [
     "def delta_f(list_of_terms, x_value, delta_x):\n",
     "    val_1 = 0\n",
-    "    for i"
+    "    for term in list_of_terms:\n",
+    "        va"
    ]
   },
   {
