--- a/index.ipynb
+++ b/index.ipynb
@@ -363,7 +363,7 @@
     "def delta_f(list_of_terms, x_value, delta_x):\n",
     "    val_1 = 0\n",
     "    for term in list_of_terms:\n",
-    "        val_1 = val_1 + term[0]*"
+    "        val_1 = val_1 + term[0]*(x_value**term[1])"
    ]
   },
   {
