Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -364,7 +364,9 @@
     "    val_1 = 0\n",
     "    for term in list_of_terms:\n",
     "        val_1 = val_1 + term[0]*(x_value**term[1])\n",
-    "    val_2 "
+    "    val_2 = 0\n",
+    "    for term in list_of_terms:\n",
+    "        "
    ]
   },
   {
