--- a/index.ipynb
+++ b/index.ipynb
@@ -366,7 +366,8 @@
     "        val_1 = val_1 + term[0]*(x_value**term[1])\n",
     "    val_2 = 0\n",
     "    for term in list_of_terms:\n",
-    "        val_2 = val_2 + term[0]*((x_value + delta_x)**term[1])"
+    "        val_2 = val_2 + term[0]*((x_value + delta_x)**term[1])\n",
+    "    return val_2 - va"
    ]
   },
   {
