Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
     "    val_2 = 0\n",
     "    for term in list_of_terms:\n",
     "        val_2 = val_2 + term[0]*((x_value + delta_x)**term[1])\n",
-    "    return val_2 - va"
+    "    return (val_2 - val_1)"
    ]
   },
   {
