Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -484,7 +484,13 @@
    "outputs": [],
    "source": [
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
-    "    "
+    "    val_1 = 0\n",
+    "    for term in list_of_terms:\n",
+    "        val_1 = val_1 + term[0]*(x_value**term[1])\n",
+    "    val_2 = 0\n",
+    "    for term in list_of_terms:\n",
+    "        val_2 = val_2 + term[0]*((x_value + delta_x)**term[1])\n",
+    "    return (val_2 - val_1)    "
    ]
   },
   {
