Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -490,7 +490,7 @@
     "    val_2 = 0\n",
     "    for term in list_of_terms:\n",
     "        val_2 = val_2 + term[0]*((x_value + delta_x)**term[1])\n",
-    "    return (val_2 - val_1)    "
+    "    del_f = val2  "
    ]
   },
   {
