--- a/index.ipynb
+++ b/index.ipynb
@@ -491,7 +491,7 @@
     "    for term in list_of_terms:\n",
     "        val_2 = val_2 + term[0]*((x_value + delta_x)**term[1])\n",
     "    del_f = val_2 - val_1\n",
-    "    return val_2"
+    "    return del_f/delta_x"
    ]
   },
   {
